--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@ background-color: red;
 <body class="flex justify-center items-center bg-pink-100 h-[100vh]">
 
 
-<div id="container" class="flex flex-col items-center justify-around pt-10  w-[700px] h-[80vh]">
+<!-- <div id="container" class="flex flex-col items-center justify-around pt-10  w-[700px] h-[80vh]">
 
 <div class="w-[80%]  flex justify-end">
 
@@ -134,8 +134,16 @@ background-color: red;
 </div>
 
 
-</div>
+</div> -->
 
+
+<form method="post" action="/   ">
+    <input type="text" placeholder="enter your name" name="name" value="Kelvin Ntiri">
+    <input type="email" placeholder="enter email" name="e-mail" value="yawntiri33@gmail.com">
+    <input type="password" placeholder="PASSWORD" name="password" value="PASSWORD">
+
+    <input type="submit" name="submit" id="submit" value="submit" class="bg-red-500 border p-1 text-white">
+</form>
 
 </body>
 <!-- Change code above this line -->
