implemented e-mail sending feature

--- a/public/index.html
+++ b/public/index.html
@@ -137,12 +137,11 @@ background-color: red;
 </div> -->
 
 
-<form method="post" action="/   ">
-    <input type="text" placeholder="enter your name" name="name" value="Kelvin Ntiri">
-    <input type="email" placeholder="enter email" name="e-mail" value="yawntiri33@gmail.com">
-    <input type="password" placeholder="PASSWORD" name="password" value="PASSWORD">
+<form method="post" action="/callAll">
+    <input type="text" placeholder="enter your name" name="name" >
+    <input type="email" placeholder="enter email" name="email" >
 
-    <input type="submit" name="submit" id="submit" value="submit" class="bg-red-500 border p-1 text-white">
+    <input type="submit" id="submit" class="bg-red-500 border p-1 text-white">
 </form>
 
 </body>
