finished email feature implementation

--- a/public/index.html
+++ b/public/index.html
@@ -45,99 +45,7 @@ background-color: red;
 <!-- Change code below this line -->
 <body class="flex justify-center items-center bg-pink-100 h-[100vh]">
 
-
-<!-- <div id="container" class="flex flex-col items-center justify-around pt-10  w-[700px] h-[80vh]">
-
-<div class="w-[80%]  flex justify-end">
-
-<div id="first" class="bg-white rounded-sm shadow-md flex w-[35em] p-1 gap-4 text-xs" >
-    <img src="https://ik.imagekit.io/kodaq/checklist-check-yes-svgrepo-com.svg?updatedAt=1697670699882" alt="" class="w-10">
-    <div id="content" class="flex flex-col gap-1">
-        <p>Solved by <span>Charlie_reid</span> in <span>post #2</span></p>
-        <p >The answer was identified. All redirects created can be found under the hosting tab of the project settings</p>
-    </div>
-</div>
-</div>
-<div id="second" class=" w-full  flex justify-between">
-<div id="sec-parent" class="flex flex-col bg-white rounded-sm shadow-md p-3 gap-3" >
-    <h3>Create a new Topic</h3>
-    <input type="text" placeholder="Type title, or paste a link here">
-    <div class="flex justify-between text-xs gap-5" >
-        <select name="Category" id="Category" class="flex-1">
-            <option value="Category">Category</option>
-            <option value="Entertainment">Entertainment</option>
-            <option value="News">News</option>
-        </select>
-        <select name="Tags" id="Tags" class="flex-1">
-            <option value="Tag">Tag</option>
-            <option value="Programs">Programs</option>
-            <option value="code">code</option>
-        </select>
-    </div>
-    <textarea name="description" id="description" cols="30" rows="4" placeholder="Enter your description here" class=" block text-sm "></textarea>
-    <div class="flex justify-between gap-3">
-        <button class="py-2 px-6 text-center text-xs text-white bg-red-500 rounded-sm">+ Create Topic</button>
-        <button class="py-2 px-9 text-center text-xs bg-blue-200 rounded-sm flex-1">Cancel</button>
-    </div>
-</div>
-
-
-<div class="flex flex-col  justify-between" >
-    <div class="flex text-xs justify-start gap-2 ">
-        <select name="All categories" id="all" class="border-none shadow-md">
-            <option value="All Categories">All categories</option>
-        </select>
-        <select name="All tags" id="allTags" class="border-none shadow-md">
-            <option value="All tags">All tags</option>
-        </select>
-        <button class="py-2 px-4 text-center text-xs text-white bg-red-500 rounded-sm shadow-md">Latest</button>
-    </div>
-    <div class="flex flex-col items-start text-xs w-[15em] justify-around h-[7em] p-2 rounded-sm bg-white shadow-md">
-        <div class="flex items-center gap-2 w-full p-1 rounded-sm"><div class="round1"></div> <p>Community resources</p> </div>
-        <div class="flex items-center gap-2 bg-blue-300 w-full p-1 rounded-sm"><div class="round2"></div> <p>Design help</p></div>
-        <div class="flex items-center gap-2 w-full p-1 rounded-sm"><div class="round3"></div> <p>Publishing Help</p> </div>
-    </div>
-
-    <div class="flex flex-col gap-2">
-        <div class="flex justify-between items-center w-[25em] p-1 text-[0.8em] bg-white rounded-sm shadow-md"> 
-            <div>
-                <strong>Navbar Dropdown on Mobile</strong>
-                <div class="flex items-center gap-2 w-full p-1 rounded-sm text-[0.8em]">
-                    <div class="round3"></div>
-                    <p>Publishing Help</p>
-                </div>
-            </div>
-            <div class="flex gap-1">
-                <img src="https://ik.imagekit.io/kodaq/edward-cisneros-_H6wpor9mjs-unsplash.jpg?updatedAt=1694787227095" alt="" class="w-4 h-4 rounded-full " >
-                <img src="https://ik.imagekit.io/kodaq/ben-den-engelsen-YUu9UAcOKZ4-unsplash.jpg?updatedAt=1694787221840" alt="" class="w-4 h-4 rounded-full " >
-                <img src="https://ik.imagekit.io/kodaq/christopher-campbell-rDEOVtE7vOs-unsplash.jpg?updatedAt=1694787206449" alt="" class="w-4 h-4 rounded-full " >
-            </div>
-        </div>
-        <div class="flex justify-between items-center w-[25em] p-1 text-[0.8em] bg-white rounded-sm shadow-md"> 
-            <div>
-                <strong>Persistent Dark Mode</strong>
-                <div class="flex items-center gap-2 w-full p-1 rounded-sm text-[0.8em]">
-                    <div class="round2"></div>
-                    <p>Design Help</p>
-                </div>
-            </div>
-            <div class="flex gap-1">
-                <img src="https://ik.imagekit.io/kodaq/edward-cisneros-_H6wpor9mjs-unsplash.jpg?updatedAt=1694787227095" alt="" class="w-4 h-4 rounded-full " >
-                <img src="https://ik.imagekit.io/kodaq/ben-den-engelsen-YUu9UAcOKZ4-unsplash.jpg?updatedAt=1694787221840" alt="" class="w-4 h-4 rounded-full " >
-
-            </div>
-        </div>
-        
-    </div>
-</div>
-
-</div>
-
-
-</div> -->
-
-
-<form method="post" action="/callAll">
+<form method="post" action="/getForm">
     <input type="text" placeholder="enter your name" name="name" >
     <input type="email" placeholder="enter email" name="email" >
 
